--- a/themes/smartinovasi/layouts/index.html
+++ b/themes/smartinovasi/layouts/index.html
@@ -10,6 +10,7 @@
                     Upgrade Brand dan Operasional Bisnis
                 </p>
                 <a class="btn btn-primary si-hero__btn" href='{{ "/product/" | relURL }}'>Selengkapnya</a>
+                <button type="button" class="btn btn-outline-primary si-hero__btn si-hero_btn">Unduh Company Profile</button>
             </div>
             <div class="col-lg-6 text-lg-end">
                 <img alt="Ilustrasi layanan IT" class="si-hero__img is-float"
