--- a/themes/smartinovasi/layouts/partials/footer.html
+++ b/themes/smartinovasi/layouts/partials/footer.html
@@ -9,6 +9,7 @@
           <p class="si-footer__desc mb-0">
             {{ .Site.Params.footer_about | default "Smart Inovasi adalah perusahaan IT yang berfokus pada IT Managed Services, System Integrator, dan pengembangan solusi digital." }}
           </p>
+          <a class="btn btn-outline-primary mt-3" href='#'>Unduh Company Profile</a>
         </div>
 
         <div class="col-6 col-lg-2">
