--- a/themes/smartinovasi/layouts/program1.html
+++ b/themes/smartinovasi/layouts/program1.html
@@ -14,6 +14,7 @@
   <img alt="Program Banner" class="si-program-banner__img" loading="lazy"
     src='{{ "assets/img/program/prakerin.png" | relURL }}' />
 </div>
+{{ errorf "PROGRAM1 LAYOUT DIPAKAI" }}
 {{ end }}
 {{ define "extra_css" }}
 <link rel="stylesheet" href='{{ "assets/css/pages/program.css" | relURL }}'>
