--- a/themes/smartinovasi/layouts/program.html
+++ b/themes/smartinovasi/layouts/program.html
@@ -23,7 +23,7 @@
                         <p class="si-program-card__desc">
                             Prakerin + merupakan program praktek belajar langsung di lingkungan pekerjaan bidang IT baik administrasi jaringan, server, hingga pengembangan aplikasi
                         </p>
-                        <a class="si-program-card__link" href='{{ "/program1/" | relURL }}'>Baca
+                        <a class="si-program-card__link" href='{{ "/detailprogram1/" | relURL }}'>Baca
                             Selengkapnya...</a>
                     </div>
                 </article>
@@ -37,7 +37,7 @@
                         <h3 class="si-program-card__title">Website Gratis</h3>
                         <p class="si-program-card__desc">Untuk mendukung ekosistem digital terutama di bidang pendidikan, Smart Inovasi menyediakan program layanan pembuatan website gratis...
                         </p>
-                        <a class="si-program-card__link" href='{{ "/program2/" | relURL }}'>Baca
+                        <a class="si-program-card__link" href='{{ "/detailprogram2/" | relURL }}'>Baca
                             Selengkapnya...</a>
                     </div>
                 </article>
