--- a/themes/smartinovasi/layouts/partials/footer.html
+++ b/themes/smartinovasi/layouts/partials/footer.html
@@ -30,7 +30,7 @@
             <li><a href='{{ "/services/" | relURL }}'>› Software Development</a></li>
             <li><a href='{{ "/services/" | relURL }}'>› IT Managed Services</a></li>
             <li><a href='{{ "/services/" | relURL }}'>› IT Training</a></li>
-            <li><a href='{{ "/services/" | relURL }}'>› Webinar</a></li>
+            <li><a href='{{ "/services/" | relURL }}'>› ERP Solution</a></li>
           </ul>
         </div>
 
